Fix z-index of footer to make link clickable

--- a/public/stylesheet/default.scss
+++ b/public/stylesheet/default.scss
@@ -94,10 +94,10 @@ body {
   padding: 0 1em 3em;
   margin-bottom: -5px;
   min-height: calc(100% - 165px);
-}
-
-.page-footer {
-  height: 100px;
+  position: relative;
+  top: -100px;
+  margin-top: 120px;
+  z-index: 75;
 }
 
 .right-shadow {
@@ -267,7 +267,7 @@ footer {
   right: 0;
   bottom: 0;
   overflow-x: hidden;
-  z-index: -1000;
+  z-index: 50;
   p {
     margin-left: 390px;
   }
